# anti-phishing-bot

./: .dockerignore  .gitignore  .swo  :w  Cargo.toml  Dockerfile  LICENSE  README.md  config.toml.example  docker-compose-dev.yml  docker-compose.yml  legal.md  nodemon.json  package.json  rustfmt.toml  sqlx-data.json  tsconfig.json
.github/: CONTRIBUTING.md  FUNDING.yml
.github/workflows/: docker.yml
docker/grafana/: Dockerfile  datasources.yml  grafana.ini
docker/prometheus/: Dockerfile  prometheus.yml
lib/: constants.ts  index.ts
lib/db/: domains.ts  exemptions.ts  guildConfigs.ts  index.ts  muted.ts
lib/services/: domainFetcher.ts  index.ts
lib/struct/: client.ts  command.ts  index.ts  logger.ts  metric.ts
lib/types/discord.js/: index.d.ts
metrics/: fish_dashboard.json  prometheus.yml
metrics/grafana/provisioning/: datasources.yml
migrations/: 01_init.sql
prisma/: schema.prisma
prisma/migrations/20210929023824_create_tables/: migration.sql
protos/: abusiveUserChecker.proto  caches.proto  checker.proto  hasher.proto  imgcompare.proto
scripts/: clean_protos  createCommands.ts  deleteCommands.ts  discord-bad-domains-intersection  download_users  grpcurl_scripts  make_protos  migrateOld.ts
services/abusive-user-checker/: .gitignore  Dockerfile  README.md  go.mod  go.sum
services/bot/: .dockerignore  .eslintignore  .eslintrc.json  .gitignore  .prettierrc.js  Dockerfile  nodemon.json  package.json  tsconfig.json
services/dm-scam-checker/: Dockerfile  go.mod  go.sum
services/domain-fetcher/: Cargo.toml  rustfmt.toml
services/domain-fetcher/src/: error.rs  main.rs  sources.rs
services/domain-scraper/: Cargo.toml  Dockerfile
services/domain-scraper/src/: error.rs  health.rs  main.rs  metrics.rs  server.rs  sources.rs
services/imgcompare/: .dockerignore  Dockerfile  go.mod  go.sum
src/: index.ts  main.rs  server.ts
src/cmds/: clearmute.ts  config.ts  lookup.ts  ping.ts  stats.ts  support.ts
src/events/: .message.ts.swp  interaction.ts  join.ts  message.ts  ready.ts
src/store/: domain.rs  mod.rs
src/util/: config.rs  mod.rs  regex.rs
(+58 files in other folders)
