[package]
name = "fish-domain-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.58"
redis = { version = "0.21", features = ["aio", "tokio-comp"] }
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1.20", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = "0.3"
